it seems that in trying to increase efficiency I introduced a bug...It has been squashed!!!

--- a/app/assets/stylesheets/layouts/_pages.scss
+++ b/app/assets/stylesheets/layouts/_pages.scss
@@ -9,3 +9,7 @@ h1 {
 h2 {
   font-size: 25px;
 }
+
+.layout {
+  min-height: calc(100vh - 46px);
+}
